--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@400&family=Barlow:wght@600&family=Ubuntu+Sans:wght@600&family=Montserrat:wght@300&display=swap" rel="stylesheet">
-    <title>SalesFlow - Todo lo que Necesitas para Impulsar tu Motor de Ventas</title>
+    <title>CashAbroad</title>
   </head>
   <body>
     <div id="root"></div>
